[tool.poetry]
name = "hack-5"
version = "1"
description = "Hackaton da comunidade DS, Comunidade Data Science Hackaton"
authors = ["vivianebuge"]
license = "MIT License"
readme = "README.md"
packages = [{include = "hack_5"}]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.12.2"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
inflection = "^0.5.1"
sklearn = "^0.0.post5"
xgboost = "^1.7.6"
Boruta = "^0.3"
math0 = "^1.1"
pivottablejs = "^0.9.0"
ipython = "^8.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
